# LogisticsAssetManagement

./: AssetManager.cpp  AssetManager.h  CMakeLists.txt  DatabaseConnection.cpp  DatabaseConnection.h  LICENSE  README.md  create_database.sql  main.cpp
include/: AssetManager.h  DatabaseConnection.h  DatabaseService.h
src/: AssetManager.cpp  DatabaseConnection.cpp  DatabaseService.cpp  main.cpp
tests/: AssetManagerTest.cpp
